--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,7 @@
 
 html, body{
     background-color: #0a192f;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -37,10 +37,10 @@ section {
 }
 
 
-.table {
+.table_div {
     height: 50%;
     width: 100%;
-    background-color: red;
+    /*background-color: red;*/
 }
 
 .selection {
@@ -48,14 +48,18 @@ section {
     height: 40%;
 }
 
+footer {
+    width: 100%;
+    height: 10%;
+}
+
 button {
     width: 80%;
     font-size: 127%;
     margin: 8% 10%;
-    height: 38%;
+    height: 30%;
     border-radius: 50px;
-    background-color: #2196f3;
-    box-shadow: 4px 4px 20px 1px white;
+    background-color: transparent;
     color: #ffffff;
 
     display: flex;
@@ -65,8 +69,8 @@ button {
 }
 
 .btn_done {
-    background: darkgreen;
-
+    border: lawngreen 9px solid;
+    color: lawngreen;
 }
 
 .btn_done:active {
@@ -74,7 +78,8 @@ button {
 }
 
 .btn_not_done {
-    background-color: darkred;
+    color: #ff6060;
+    border: #ff6060 solid 9px;
 }
 
 .btn_not_done:active {
@@ -86,3 +91,32 @@ button img {
     height: 50%;
 }
 
+footer button {
+    margin: 0 auto;
+    height: 62%;
+    border: #2196F3 solid 9px;
+    color: #2196F3;
+}
+
+footer button:active {
+    background-color: #005d69;
+}
+
+.table {
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    padding: 30px 0;
+}
+
+td {
+    padding: 20px 0;
+}
+
+th, td {
+    border: #2196F3 solid 10px;
+}
