--- a/templates/index.twig
+++ b/templates/index.twig
@@ -71,11 +71,11 @@
             <input type="hidden" id="currentDate" value="">
         {% endblock %}
         {% block footer %}
-            <footer>
-                <button>
-                    Daten verwalten
-                </button>
-            </footer>
+{#            <footer>#}
+{#                <button>#}
+{#                    Daten verwalten#}
+{#                </button>#}
+{#            </footer>#}
         {% endblock %}
     </main>
 {% endblock %}
