--- a/templates/index.twig
+++ b/templates/index.twig
@@ -25,7 +25,7 @@
                         {% block time_change %}
                             <div class="time_change">
                                 <img src="./assets/icons/left-arrow.svg" alt="left arrow" id="left-arrow">
-                                <span id="time-span">27.07.2023</span>
+                                <span id="time-span"></span>
                                 <img src="./assets/icons/right-arrow.svg" alt="right-arrow" id="right-arrow">
                             </div>
                         {% endblock %}
