--- a/templates/index.twig
+++ b/templates/index.twig
@@ -22,20 +22,22 @@
             <section>
                 {% block table %}
                     <div class="table_div">
-                        <table class="table">
+                        <table class="table" id="table">
                             <thead>
                                 <tr>
                                     <th>Person</th>
                                     <th>Raum</th>
                                     <th>Aufgabe</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
                             {% for aufgabe in aufgaben %}
-                                <tr id="{{ aufgabe.aktivitaet_id }}">
+                                <tr id="{{ aufgabe.aktivitaeten_id }}">
                                     <td>{{ aufgabe.name }}</td>
                                     <td>{{ aufgabe.raum }}</td>
                                     <td>{{ aufgabe.aktivitaet }}</td>
+                                    <td><img src="./assets/icons/{{ aufgabe.icon }}.svg" alt="clock" id="icon"></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -45,17 +47,20 @@
 
                 {% block selection %}
                     <div class="selection">
-                        <button class="btn_done">
+                        <button class="btn_done" id="btn_done">
                             <span>Erledigt</span>
                             <img src="./assets/icons/tick.svg" alt="">
                         </button>
-                        <button class="btn_not_done">
+                        <button class="btn_not_done" id="btn_not_done">
                             <span>Nicht erledigt</span>
                             <img src="./assets/icons/cross.svg" alt="">
                         </button>
                     </div>
                 {% endblock %}
             </section>
+        {% endblock %}
+        {% block hidden_input %}
+            <input type="hidden" id="currentDate" value="">
         {% endblock %}
         {% block footer %}
             <footer>
@@ -66,6 +71,8 @@
         {% endblock %}
     </main>
 {% endblock %}
+
+<script src="./assets/script.js"></script>
 
 </body>
 </html>
