--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,7 +28,7 @@ main {
 }
 
 h1 {
-    margin-top: 40%;
+    margin-top: 30%;
 }
 
 section {
@@ -46,6 +46,10 @@ section {
 .selection {
     margin-top: 10%;
     height: 40%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
@@ -54,18 +58,18 @@ footer {
 }
 
 button {
-    width: 80%;
-    font-size: 127%;
-    margin: 8% 10%;
+    width: 40%;
+    font-size: 115%;
+    margin: 5% 6%;
     height: 30%;
     border-radius: 50px;
     background-color: transparent;
     color: #ffffff;
-
     display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    float: left;
 }
 
 .btn_done {
@@ -137,3 +141,5 @@ th, td {
 .time_change img {
     height: 50px;
 }
+
+
